--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
-    "ethereumjs-tx": "^1.3.4",
+    "ethereumjs-tx": "^1.3.7",
     "express": "^4.16.3",
-    "moment": "^2.22.1",
+    "moment": "^2.22.2",
     "morgan": "^1.9.0",
-    "react": "^16.3.2",
+    "react": "^16.4.2",
     "react-async-script": "^0.9.1",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.4.2",
     "react-google-recaptcha": "^0.9.9",
     "react-notification-system": "^0.2.17",
     "react-scripts": "^1.1.4",
-    "touch": "^3.1.0"
+    "touch": "^3.1.0",
+    "wanchain-util": "^1.2.0"
   },
   "homepage": "."
 }
