Add Travis, update captcha

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitfwd_ropsten_faucet",
+  "name": "wanchain_faucet",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
