Change Styling and update analytics

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "bitfwd ropsten faucet",
-  "name": "bitfwd ropsten faucet",
+  "short_name": "tyrion70 wanchain faucet",
+  "name": "tyrion70 wanchain faucet",
   "icons": [
     {
       "src": "favicon.ico",
