--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
+    "bignumber.js": "^2.0.7",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "ethereumjs-tx": "^1.3.7",
